--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-paper": "^5.11.3",
+    "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.2"
@@ -26,6 +27,8 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native-vector-icons": "^6.4.18",
+    "react-native-countdown-component": "^2.7.1",
+    "react-native-elements": "^3.4.3",
     "typescript": "^5.1.3"
   },
   "private": true
