--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-switch": "^1.5.1",
     "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
