--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
+    "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-blur": "^12.6.0",
     "expo-status-bar": "~1.6.0",
